# pokedex

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/api/: calls.py  connection.py  main.py
backend/app/: main.py
backend/app/api/: calls.py  connection.py  pokemon.py  schemas.py
backend/src/pokedex/database/: connection.py  contracts.py  migrate.py  schema.py
backend/src/pokedex/extract/: extract.py
backend/src/pokedex/load/: load.py
backend/src/pokedex/scripts/: run_etl.py
backend/src/pokedex/transform/: transform.py
backend/tests/api/: test_api.py
backend/tests/database/: test_db_core.py
backend/tests/extract/: test_extract_core.py
backend/tests/load/: test_load_core.py
backend/tests/scripts/: test_run_etl.py
backend/tests/transform/: test_transform_core.py
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Footer.jsx  NavBar.jsx
frontend/src/pages/: DatabasePage.jsx  HomePage.jsx
src/pokedex/: errors.py
src/pokedex/database/: connection.py  contracts.py  schema.py
src/pokedex/extract/: extract.py  http.py  listings.py  urls.py
src/pokedex/load/: load.py
src/pokedex/scripts/: init_db.py  run_etl.py
src/pokedex/transform/: transform.py
src/scripts/: init_db.py
src/utils/: logger.py
tests/database/: test_connection.py  test_db_core.py
tests/extract/: test_extract_core.py
tests/load/: test_load_core.py
tests/scripts/: test_run_etl.py
tests/transform/: test_transform_core.py
